--- a/src/styles/_hero.scss
+++ b/src/styles/_hero.scss
@@ -11,6 +11,8 @@
     max-width: 640px;
     width: 100%;
 
+    list-style: none;
+
     &__branding {
       max-width: 320px;
       width: 100%;
@@ -50,6 +52,7 @@
           color: variables.$secondary-color;
           background-color: variables.$btn-bg-color;
           border-radius: 4px;
+          border: none;
 
           margin-top: 2vw;
           margin-bottom: 0.5rem;
