--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -1,6 +1,7 @@
 @use "variables";
 @use "hero";
 @use "shows";
+@use "plains";
 
 @font-face {
   font-family: Avenir;
@@ -38,4 +39,19 @@ body {
 
 button {
   cursor: pointer;
+}
+
+.btn {
+  display: block;
+
+  width: 100%;
+  height: 3.75rem;
+
+  color: variables.$secondary-color;
+  background-color: variables.$btn-bg-color;
+  border-radius: 4px;
+  border: none;
+
+  margin-top: 2vw;
+  margin-bottom: 0.5rem;
 }
