--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -2,7 +2,9 @@
 @use "hero";
 @use "shows";
 @use "plains";
-@use "watch-anywhere";
+@use "available-devices";
+@use "faq";
+@use "footer";
 
 @font-face {
   font-family: Avenir;
@@ -55,4 +57,50 @@ button {
 
   margin-top: 2vw;
   margin-bottom: 0.5rem;
+}
+
+.img-text-section {
+  padding: 5.6vw;
+
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  align-items: center;
+
+  img {
+    max-width: 100%;
+  }
+
+  &__div {
+    padding: 2vw;
+
+    &__title {
+      margin-bottom: 1.5rem;
+    }
+  }
+
+  &--img-full-width {
+    display: block;
+    position: relative;
+
+    img {
+      width: 100%;
+    }
+
+    &__div {
+      position: absolute;
+      top: 0;
+      left: 50%;
+
+      width: calc(50% - 5.6vw);
+      height: 100%;
+
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+    }
+  }
+}
+
+ul {
+  list-style: none;
 }
