--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -5,6 +5,7 @@
 @use "available-devices";
 @use "faq";
 @use "footer";
+@use "header";
 
 @font-face {
   font-family: Avenir;
@@ -53,10 +54,26 @@ button {
   color: variables.$secondary-color;
   background-color: variables.$btn-bg-color;
   border-radius: 4px;
-  border: none;
+  border: 1px solid variables.$btn-bg-color;
+  padding: 0.5rem 0.875rem;
 
-  margin-top: 2vw;
-  margin-bottom: 0.5rem;
+  &--secondary {
+    background-color: #0063e5;
+
+    &:hover {
+      background-color: lighten(#0063e5, 3%);
+    }
+  }
+
+  &--dark {
+    background-color: rgba(0, 0, 0, 0.8);
+    border-color: variables.$secondary-color;
+
+    &:hover {
+      background-color: variables.$secondary-color;
+      color: variables.$btn-bg-color;
+    }
+  }
 }
 
 .img-text-section {
@@ -103,4 +120,8 @@ button {
 
 ul {
   list-style: none;
+}
+
+a {
+  text-decoration: none;
 }
